# inspirer

./: .appveyor.yml  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
ci/: before_deploy.ps1  before_deploy.sh
example_files/: test_biber.aux  test_biber.blg  test_biber.tex  test_bibtex.aux  test_bibtex.blg  test_bibtex.tex
inspirer/: Cargo.toml  clippy.toml
inspirer/example_files/: test_biber.bib  test_biber.blg  test_biber.tex  test_bibtex.aux  test_bibtex.blg
inspirer/tests/: tests.rs
snap/: snapcraft.yaml
src/: lib.rs
tests/: tests.rs  text.rs
