[package]
name = "inspirer"
authors = ["Nathan Musoke <nathan.musoke@gmail.com>"]
version = "0.1.0-alpha"
publish = false
description = "For working with LaTeX, inspirehep.net, and BibTeX/BibLaTeX"

repository = "https://github.com/musoke/inspirer"
readme = "README.md"

keywords = ["latex", "bibtex", "physics", "inspire", "inspirehep.net"]
categories = ["command-line-utilities", "science"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "musoke/inspirer", branch = "master" }
appveyor  = { repository = "musoke/inspirer", branch = "master", service = "github" }
gitlab    = { repository = "musoke/inspirer", branch = "master" }

[dependencies]
clap = "2.20.0"
regex = "0.2"
reqwest = "0.5.0"
select = "0.3.0"
slog = "1.4.1"
slog-stdlog = "1.1.0"
slog-term = "1.4.0"

libinspire = { path = "../libinspire" }
